--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -20,7 +20,7 @@
             <div class="text-box">
                 <h1 class="heading-primary">
                     <span class="heading-primary-main">Outdoors</span>
-                    <span class="heading-primary-sub">is where life is happening</span>
+                    <span class="heading-primary-sub">is where life happens</span>
                 </h1>
             </div>
         </header>
